--- a/clicker/BoschClicker.csproj
+++ b/clicker/BoschClicker.csproj
@@ -3,10 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
-    <RootNamespace>Aula_1</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
-    <!-- Nycollas disse para tirar essa linha, pq ela é má e fica enchendo o saco depois -->
-    <!-- <Nullable>enable</Nullable> --> 
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 </Project>
