terminei a atividade da aula 2, fiz conexões entre os models e tals

--- a/A2/Model/Model.csproj
+++ b/A2/Model/Model.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\DataBase\DataBase.csproj" />
+    <ProjectReference Include="..\BD\DataBase.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
